trying to make coins different from wall

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <h1>Ashley's Game</h1>
 
   <script src="js/main2.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
